...

class _CustomTextFieldState extends State<CustomTextField> {
  static final BorderRadius _buttonBorderRadius = BorderRadius.circular(32.0);
  static const EdgeInsets _contentPadding =
      EdgeInsets.symmetric(vertical: 8.0, horizontal: 16.0);
  static const IconData _sendIcon = Icons.send;
  static const String _sendIconSemanticLabel = 'Send';

  late final TextEditingController _controller;

  @override
  void initState() {
    super.initState();
...
