...
    required this.replyCallback,
  });

  static const double _replyIconSize = 16.0;
  static const IconData _defaultAvatarIcon = Icons.person_outline;
  static const IconData _replyIcon = Icons.reply;
  static const String _replyLabel = 'Reply';

  @override
  Widget build(BuildContext context) => Column(
        mainAxisSize: MainAxisSize.min,
        crossAxisAlignment: CrossAxisAlignment.start,
        children: <Widget>[
...
