...
  static const EdgeInsets _screenPadding =
      EdgeInsets.symmetric(horizontal: 16.0, vertical: 24.0);
  static const double _separatorSize = 16.0;
  static const IconData _searchIcon = Icons.search;
  static const String _searchSemanticLabel = 'Search';
  static const String _homeTitle = 'Home';
  static const String _readButtonLabel = 'Read';

  final HomeModel model;
  final HomeController controller;

  const HomeView({
    required this.model,
...
