appId: de.htwg.moba.medi_support
---
# Precondition: App started and on Homescreen
- tapOn: "Read"
- tapOn: "Reply"
- inputText: "Hello, Maestro!"
- tapOn: "Send"
